# cstructures

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  makefile  test_algo.c  test_cstructures.c
include/: algo.h  carrays.h  cavl.h  clists.h  cqueues.h  cstacks.h  cstructures.h  cstructurescommon.h  dataset_test.h  screen.h
include/screen/: screen.h
lib/: build.mk
src/: CMakeLists.txt  algo.c  carrays.c  cavl.c  clists.c  cqueues.c  cstacks.c  cstructures.c  cstructurescommon.c  dataset_test.c
src/screen/: screen.c
src/test/: dataset_test.c
